--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,3 +8,13 @@
   </ul>
 <% end %>
 <p> Average Actor Age: <%= @movie.avg_actor_age %></p>
+
+<h2> Add Actor to Movie </h2>
+<%= form_with url: "/movies/#{@movie.id}", method: :post, local: true do |form| %>
+<%= form.label :name %>
+<%= form.text_field :name %>
+<%= form.label :age %>
+<%= form.text_field :age %>
+<%= form.submit 'Add Actor' %>
+<% end %>
+
